@@ -1,3 +1,8 @@
+2012-09-27 Borut Razem <borut.razem AT gmail.com>
+
+	* support/scripts/inc2h.pl, support/scripts/cinc2h.pl,
+	  support/scripts/inc2h-pic16.pl: fixed typo tbut
+
 2012-09-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* support/regression/tests/bug3467508.c:
